--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.0.0",
     "commitizen": "^3.1.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
