--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.0.0",
+    "@material-ui/icons": "^4.0.1",
     "commitizen": "^3.1.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
