--- a/.eslintrc
+++ b/.eslintrc
@@ -11,7 +11,8 @@
   "rules": {
     "indent": [2, 2],
     "react/jsx-indent": ["error", 2],
-    "import/prefer-default-export": "off"
+    "import/prefer-default-export": "off",
+    "react/prop-types":"off"
 
   },
   "parserOptions": {
