--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "dependencies": {
     "@material-ui/core": "^4.0.0",
     "@material-ui/icons": "^4.0.1",
+    "apollo-server": "^2.6.3",
     "axios": "^0.19.0",
     "commitizen": "^3.1.1",
     "dotenv": "^8.0.0",
+    "graphql": "^14.3.1",
     "moment": "^2.24.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
